--- a/templates/wrongpwd.html
+++ b/templates/wrongpwd.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav mr-auto"></ul>
                     <span class="navbar-text actions"> <a href="/" class="login">Home</a>
-                      <a href ="/login">Login</a>
+					<a href ="/signup">sign_up</a>
                      </div>
             </div>
         </nav>
@@ -36,21 +36,12 @@
         
       </div>
       <div class="col-sm-4">
-          <h4>User Registration Form</h4>
-            <form action="/registrationInfo" method="POST">
-              <div class="form-group">
-                <label for="usr">First Name:</label>
-                <input name="fName" type="text" class="form-control" id="fName" required>
-              </div>
-			  <div class="form-group">
-                <label for="usr">Last Name:</label>
-                <input name="lName" type="text" class="form-control" id="lName" required>
-              </div>
+          <h4>LOGIN</h4>
+          <form action="/loginInfo" method="POST">
               <div class="form-group">
                 <label for="pwd">Email:</label>
                 <input name="email" type="email" class="form-control" id="pwd" required>
               </div>
-
               <div class="form-group">
                 <label for="pwd">Password:</label>
                 <input name="password" type="password" class="form-control" id="password" required>
@@ -62,11 +53,14 @@
       </div>
     </div>
     <hr>
- 
 
     
      
 
+    <p>Wrong Email or Password</p>
+     
+ 
+     
     <br>
     <br>
     <hr>
